chore(web): migrate to pnpm
- Migrates the project's package manager from npm to pnpm.
- Updates README to reflect pnpm usage.
- Configures GitHub Actions workflow to use pnpm for build and deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+          run_install: false
       - name: Install dependencies
-        run: cd app && npm install
+        run: cd app && pnpm install
       - name: Build
-        run: cd app && npm run build
+        run: cd app && pnpm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
