refactor(web): remove pnpm run command
- Removes the redundant 'run' subcommand from pnpm commands in README and GitHub Actions workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: cd app && pnpm install
       - name: Build
-        run: cd app && pnpm run build
+        run: cd app && pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
