fix(github-actions): metadata 추출 워크플로우 권한 오류 수정

--- a/.github/workflows/extract-music-metadata.yml
+++ b/.github/workflows/extract-music-metadata.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   extract-metadata:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Add write permission for repository contents
 
     steps:
       - name: Checkout repository
