feat(github-actions): metadata 추출 워크플로우 수동 실행 트리거 추가

--- a/.github/workflows/extract-music-metadata.yml
+++ b/.github/workflows/extract-music-metadata.yml
@@ -6,6 +6,7 @@ on:
       - main # Or a specific branch for music updates, e.g., 'music-updates'
     paths:
       - 'public/music/**' # Trigger only when MP3s are added/changed
+  workflow_dispatch: # Add this line to enable manual triggering
 
 jobs:
   extract-metadata:
