--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@types/howler": "^2.2.12",
     "@types/jsmediatags": "^3.9.6",
     "@types/node": "^20",
     "@types/react": "^19",
